--- a/1_NFL_Predictor_Data_Set_Up_SQL.ipynb
+++ b/1_NFL_Predictor_Data_Set_Up_SQL.ipynb
@@ -2,20 +2,119 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>table_catalog</th>\n",
+       "      <th>table_schema</th>\n",
+       "      <th>table_name</th>\n",
+       "      <th>table_type</th>\n",
+       "      <th>self_referencing_column_name</th>\n",
+       "      <th>reference_generation</th>\n",
+       "      <th>user_defined_type_catalog</th>\n",
+       "      <th>user_defined_type_schema</th>\n",
+       "      <th>user_defined_type_name</th>\n",
+       "      <th>is_insertable_into</th>\n",
+       "      <th>is_typed</th>\n",
+       "      <th>commit_action</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>nfl</td>\n",
+       "      <td>pg_catalog</td>\n",
+       "      <td>pg_statistic</td>\n",
+       "      <td>BASE TABLE</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>nfl</td>\n",
+       "      <td>pg_catalog</td>\n",
+       "      <td>pg_type</td>\n",
+       "      <td>BASE TABLE</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>nfl</td>\n",
+       "      <td>pg_catalog</td>\n",
+       "      <td>pg_authid</td>\n",
+       "      <td>BASE TABLE</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>YES</td>\n",
+       "      <td>NO</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  table_catalog table_schema    table_name  table_type  \\\n",
+       "0           nfl   pg_catalog  pg_statistic  BASE TABLE   \n",
+       "1           nfl   pg_catalog       pg_type  BASE TABLE   \n",
+       "2           nfl   pg_catalog     pg_authid  BASE TABLE   \n",
+       "\n",
+       "  self_referencing_column_name reference_generation user_defined_type_catalog  \\\n",
+       "0                         None                 None                      None   \n",
+       "1                         None                 None                      None   \n",
+       "2                         None                 None                      None   \n",
+       "\n",
+       "  user_defined_type_schema user_defined_type_name is_insertable_into is_typed  \\\n",
+       "0                     None                   None                YES       NO   \n",
+       "1                     None                   None                YES       NO   \n",
+       "2                     None                   None                YES       NO   \n",
+       "\n",
+       "  commit_action  \n",
+       "0          None  \n",
+       "1          None  \n",
+       "2          None  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
+    "#set up postgress sql\n",
     "from sqlalchemy import create_engine\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "engine = create_engine('postgresql://@localhost:5432/nfl')\n",
     "pd.read_sql(\"SELECT * FROM information_schema.tables LIMIT 3;\", engine)\n",
     "\n",
-    "\n",
-    "import numpy as np"
+    "\n"
    ]
   },
   {
@@ -105,6 +204,8 @@
     }
    ],
    "source": [
+    "#data is saved in csv files\n",
+    "\n",
     "ls ../../../ProjectData/NFL/nfl_00-15/csv/"
    ]
   },
@@ -232,13 +333,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In this notebook I load the data to an SQL database and use python to generate query language to run in SQL to calculate running averages."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "avg(case when o.pa is null then 0 else o.pa end) over(partition by o.player order by o.gid asc rows 0 preceding)as avg_p_vs_all_pa1,\n",
+      "avg(case when o.pa is null then 0 else o.pa end) over(partition by o.player order by o.gid asc rows 1 preceding)as avg_p_vs_all_pa2,\n",
+      "avg(case when o.pa is null then 0 else o.pa end) over(partition by o.player order by o.gid asc rows 2 preceding)as avg_p_vs_all_pa3,\n",
+      "avg(case when o.pa is null then 0 else o.pa end) over(partition by o.player order by o.gid asc rows 3 preceding)as avg_p_vs_all_pa4,\n",
+      "avg(case when o.pa is null then 0 else o.pa end) over(partition by o.player order by o.gid asc rows 4 preceding)as avg_p_vs_all_pa5,\n",
+      "avg(case when o.pa is null then 0 else o.pa end) over(partition by o.player order by o.gid asc rows 7 preceding)as avg_p_vs_all_pa8,\n",
+      "avg(case when o.pa is null then 0 else o.pa end) over(partition by o.player order by o.gid asc rows 11 preceding)as avg_p_vs_all_pa12,\n",
+      "avg(case when o.pa is null then 0 else o.pa end) over(partition b\n"
+     ]
+    }
+   ],
    "source": [
     "###'2: player level avg stats for past few games vs all opps\n",
     "\n",
@@ -263,7 +388,7 @@
     "\n",
     "    return  string\n",
     "    \n",
-    "#sql_printer_p(pcols, paverages)\n"
+    "print sql_printer_p(pcols, paverages)[:1000]\n"
    ]
   },
   {
