--- a/2_NFL_Predictor_Feature_Set_Up.ipynb
+++ b/2_NFL_Predictor_Feature_Set_Up.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "General for feature / target selector function:\n",
+    "General plan for feature / target selector function:\n",
     "\n",
     "1. Select position and seasons, sort by player / gid / set dcp and home to string\n",
     "2. Take any int64 or float64 in df.ix[:,:34] and use a RobustScaler on it and reassign (on the whole subset)\n",
@@ -769,29 +769,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "31383\n"
-     ]
-    }
-   ],
-   "source": [
-    "testWR.isnull().sum()\n",
-    "\n",
-    "#839\n",
-    "print len(testWR) - 839\n",
-    "\n",
-    "\n",
-    "#making sure that the only NAs are the nas in the targets. \n",
-    "#these na values are the last games for which the shift -1 moved the targets back"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
